Kubernetes/catalog-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  labels:
    app: catalog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: pjaiswal10/catalog-service:1.0
          ports:
            - containerPort: 8300
---

apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: catalog-service
    spring-boot: "true"
spec:
  ports:
    - port: 8300
      protocol: TCP
  selector:
    app: catalog-service
  type: NodePort
