Kubernetes/gateway-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: pjaiswal10/gateway-service:1.0
          ports:
            - containerPort: 8100
---

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-service
    spring-boot: "true"
spec:
  ports:
    - port: 8100
      protocol: TCP
  selector:
    app: gateway-service
  type: NodePort
