Kubernetes/pricing-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-service
  labels:
    app: pricing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing-service
  template:
    metadata:
      labels:
        app: pricing-service
    spec:
      containers:
        - name: pricing-service
          image: pjaiswal10/pricing-service:1.0
          ports:
            - containerPort: 8200
---

apiVersion: v1
kind: Service
metadata:
  name: pricing-service
  labels:
    app: pricing-service
    spring-boot: "true"
spec:
  ports:
    - port: 8200
      protocol: TCP
  selector:
    app: pricing-service
  type: NodePort
